--- a/src/component/Categories/Categories.scss
+++ b/src/component/Categories/Categories.scss
@@ -6,11 +6,15 @@
 
         .categories_head {
             @include display(space-between, initial);
+            margin-bottom: 20px;
+
+            .content_dropdown {
+                @include display(center, center);
+            }
 
             .search_categories_btn {
                 @include display(center, center);
                 gap: 15px;
-                margin-bottom: 20px;
             }
         }
 
@@ -146,6 +150,7 @@
             color: $white;
             font-weight: 600;
             margin-left: 10px;
+            cursor: pointer;
         }
 
         table {
@@ -154,13 +159,12 @@
             border-collapse: collapse;
 
             thead {
-                // border: 1px solid $border_color;
                 background-color: $table_bg;
 
                 th {
                     text-align: center;
                     padding: 15px 10px;
-                    width: 25%;
+                    width: 20%;
                 }
             }
 
@@ -170,6 +174,8 @@
                     text-align: center;
                     padding: 10px;
                     border-bottom: 1px solid $border_color;
+                    letter-spacing: .5px;
+                    -webkit-text-stroke: thin;
 
                     img {
                         width: 50px;
@@ -208,6 +214,12 @@
                             left: 26px;
                         }
                     }
+
+                    svg {
+                        width: 30px;
+                        height: 30px;
+                        cursor: pointer;
+                    }
                 }
             }
         }
@@ -238,8 +250,9 @@
                         background-color: $white;
                         border: 1px solid $border_color;
                         border-radius: 6px;
-                        font-size: 70px;
+                        font-size: 72px;
                         padding: 20px;
+                        cursor: pointer;
                     }
                 }
 
@@ -255,7 +268,7 @@
                     border-radius: 4px;
 
                     &::placeholder {
-                        color: $black;
+                        color: $grey;
                     }
                 }
 
