--- a/src/component/Categories/Categories.scss
+++ b/src/component/Categories/Categories.scss
@@ -317,3 +317,38 @@
         }
     }
 }
+
+.dropdown-toggle {
+    background-color: transparent;
+    padding: 0;
+}
+
+.dropdown {
+    position: relative;
+
+    .custom-dropdown-toggle {
+        background-color: $white !important;
+        color: $black !important;
+        padding: 7px 15px !important;
+        margin-left: 20px !important;
+
+        img {
+            width: 20px;
+            margin-left: 10px;
+        }
+    }
+
+    .dropdown-menu {
+        transform: translate3d(18px, 32px, 0px) !important;
+        display: flex;
+        background-color: rgba(250, 250, 250, 0.9882352941);
+        padding: 10px;
+        flex-direction: column;
+        box-shadow: 1px 1px 6px #d0c3c3;
+
+        .dropdown-item {
+            padding: 4px 10px;
+            color: #000;
+        }
+    }
+}
