--- a/src/component/Categories/Categories.scss
+++ b/src/component/Categories/Categories.scss
@@ -309,6 +309,7 @@
                             font-size: 80px;
                             padding: 20px;
                             cursor: pointer;
+                            position: absolute;
                         }
 
                         img {
